# docgent

./: .env.example  .env.prod.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.frontend.yml  docker-compose.prod.yml  docker-compose.yml  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.server.json  vite.config.ts
backend/: .env.example  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026-03-13_initial_schema.py  2026-03-14_create_notebooks_and_notebook_items.py  20260314_create_notebooks_and_notebook_items.py  20260315_add_notebook_sources.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  langchain_assistant.py  prompts.py  rewrite.py
backend/app/agents/tools/: __init__.py  notebook_tools.py  workspace_tools.py
backend/app/api/: deps.py  exception_handlers.py  versioning.py
backend/app/api/routes/v1/: __init__.py  agent.py  auth.py  conversations.py  health.py  items.py  notebooks.py  oauth.py  rewrite.py  sessions.py  users.py  workspaces.py
backend/app/commands/: __init__.py  cleanup.py  seed.py
backend/app/core/: config.py  csrf.py  logging.py  middleware.py  oauth.py  sanitize.py
backend/app/db/: session.py
backend/app/db/models/: __init__.py  conversation.py  item.py  notebook.py  notebook_item.py  notebook_source.py  session.py  user.py
backend/app/repositories/: __init__.py  base.py  conversation.py  item.py  notebook.py  session.py  user.py
backend/app/schemas/: __init__.py  conversation.py  item.py  notebook.py  rewrite.py  session.py  user.py  workspace.py
backend/app/services/: __init__.py  conversation.py  item.py  notebook.py  rewrite.py  session.py  user.py  workspace.py
backend/cli/: commands.py
backend/tests/: conftest.py  test_agents.py  test_core.py  test_logging.py  test_notebook_service.py  test_notebook_tools.py  test_repositories.py  test_rewrite_agent.py  test_services.py  test_workspace_tools.py
backend/tests/api/: test_auth.py  test_exceptions.py  test_items.py  test_notebooks.py  test_rewrite.py  test_users.py  test_workspaces.py
desktop/: README.md
docs/: DESIGN.md  FRONTEND.md  PLANS.md  (+5 more)
(+93 files in other folders)
